--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 # Ignore bundler config
 /.bundle
 
+# Ignore openshift config
+/.openshift
+
 # Ignore the default SQLite database.
 /db/*.sqlite3
 
